--- a/css/styles.css
+++ b/css/styles.css
@@ -3798,6 +3798,205 @@ img.u-pull-left {
 }
 
 /* ===================================================================
+ * # THESIS
+ *
+ *
+ * ------------------------------------------------------------------- */
+.s-thesis {
+  background-image: url(../images/imgback1.jpg);
+  padding-top: var(--vspace-5);
+  padding-bottom: var(--vspace-5);
+}
+
+/* ------------------------------------------------------------------- 
+ * ## bricks masonry 
+ * ------------------------------------------------------------------- */
+.bricks {
+  max-width: var(--width-wide);
+  margin-top: var(--vspace-3);
+  margin-bottom: var(--vspace-3);
+}
+
+.bricks .masonry {
+  overflow: hidden;
+}
+
+.bricks-wrapper {
+  display: block;
+  position: relative;
+}
+
+.bricks-wrapper .grid-sizer,
+.bricks-wrapper .brick {
+  width: 25%;
+}
+
+.bricks-wrapper .grid-sizer--double,
+.bricks-wrapper .brick--double {
+  width: 50%;
+}
+
+.bricks-wrapper .brick {
+  float: left;
+  padding: 0;
+}
+
+/* ------------------------------------------------------------------- 
+ * ## masonry entries 
+ * ------------------------------------------------------------------- */
+.bricks-wrapper .entry {
+  overflow: hidden;
+  position: relative;
+}
+
+.bricks-wrapper .entry__link {
+  display: block;
+  position: relative;
+}
+
+.bricks-wrapper .entry__link img {
+  vertical-align: bottom;
+  transition: all 0.3s ease-in-out;
+  margin: 0;
+}
+
+.bricks-wrapper .entry__link::before {
+  z-index: 1;
+  content: "";
+  display: block;
+  background: rgba(0, 0, 0, 0.6);
+  opacity: 0;
+  visibility: hidden;
+  width: 100%;
+  height: 100%;
+  transition: all, 0.5s cubic-bezier(0.215, 0.61, 0.355, 1);
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.bricks-wrapper .entry__link::after {
+  z-index: 1;
+  display: block;
+  content: "...";
+  font-family: georgia, serif;
+  font-size: 2.4rem;
+  height: 90px;
+  width: 90px;
+  letter-spacing: 0.2rem;
+  line-height: 90px;
+  margin-left: -45px;
+  margin-top: -55px;
+  text-align: center;
+  color: white;
+  opacity: 0;
+  visibility: hidden;
+  transform: scale(0.5);
+  transition: all, 0.5s cubic-bezier(0.215, 0.61, 0.355, 1);
+  position: absolute;
+  left: 50%;
+  top: 50%;
+}
+
+.bricks-wrapper .entry {
+  position: relative;
+}
+
+.bricks-wrapper .entry__info {
+  z-index: 2;
+  transform: translateY(-100%);
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.5s cubic-bezier(0.215, 0.61, 0.355, 1);
+  position: absolute;
+  top: var(--vspace-0_75);
+  left: var(--vspace-0_75);
+}
+
+.bricks-wrapper .entry__cat,
+.bricks-wrapper .entry__title {
+  font-family: var(--font-2);
+}
+
+.bricks-wrapper .entry__cat {
+  font-size: calc(var(--text-size) * 0.7778);
+  line-height: 1.8;
+  color: rgba(255, 255, 255, 0.3);
+}
+
+.bricks-wrapper .entry__title {
+  font-weight: 500;
+  font-size: calc(var(--text-size) * 0.9444);
+  line-height: 1.2;
+  margin: 0;
+  color: white;
+}
+
+/* on hover
+ */
+.bricks-wrapper .entry:hover .entry__link::before {
+  opacity: 1;
+  visibility: visible;
+}
+
+.bricks-wrapper .entry:hover .entry__link::after {
+  opacity: 1;
+  visibility: visible;
+  transform: scale(1);
+}
+
+.bricks-wrapper .entry:hover .entry__link img {
+  transform: scale(1.05);
+}
+
+.bricks-wrapper .entry:hover .entry__info {
+  opacity: 1;
+  visibility: visible;
+  transform: translateY(0);
+}
+
+/* ------------------------------------------------------------------- 
+ * responsive:
+ * thesis
+ * ------------------------------------------------------------------- */
+@media screen and (max-width: 1200px) {
+  .bricks-wrapper .entry__cat {
+    font-size: calc(var(--text-size) * 0.6667);
+  }
+
+  .bricks-wrapper .entry__title {
+    font-size: calc(var(--text-size) * 0.8333);
+  }
+}
+
+@media screen and (max-width: 1000px) {
+  .bricks-wrapper .grid-sizer,
+  .bricks-wrapper .brick {
+    width: 50%;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .s-folio {
+    padding-top: var(--vspace-4);
+    padding-bottom: var(--vspace-4_5);
+  }
+
+  .bricks {
+    margin-top: var(--vspace-1_75);
+    margin-bottom: var(--vspace-2);
+  }
+}
+
+@media screen and (max-width: 550px) {
+  .bricks-wrapper .grid-sizer,
+  .bricks-wrapper .brick {
+    width: 100%;
+    float: none;
+  }
+}
+
+/* ===================================================================
  * # ABOUT
  *
  *
